# cybercrab

./: Cargo.toml  flake.nix  readme.md
src/: derp.rs  fotocell.rs  io.rs  lib.rs  main.rs  motor.rs  physics.rs  sensor.rs  shiftreg.rs  sysorder.rs  tbana.rs  ui.rs
