[package]
name = "cybercrab"
version = "0.1.0"
edition = "2021"

[dependencies]
avian3d = "0.4"
bevy = { version = "0.17", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.34"
# bevy_polyline = "0.12.0"
bitvec = "1.0.1"
itertools = "0.14.0"
rand = "0.9.2"


[profile.dev.package."*"]
opt-level = 3
